c/src/test/resources/syntax/bad/BadFileId.ctrl
<controlFile>
<sourceFile name="foo.c" id="-1" />
<run>
  <startPosition fileId="1" line="1"/>
  <endPosition fileId="1" line="1"/>
</run>
</controlFile>
